--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,18 @@
 title: Blog Transports du Futur
 description: Archives restaurées
+baseurl: "/transportsdufutur"  # Le nom du dépôt GitHub (important pour les liens)
+url: "https://gabrielplassat.github.io"
 theme: minima
 markdown: kramdown
+
+permalink: /:year/:month/:title/
+
+plugins:
+  - jekyll-feed
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
