Ajout du CSS personnalisé au blog

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,3 +16,17 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+
+sass:
+  style: compressed
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      css: "/assets/css/custom.css"
